fix(common): redirectOrder 快照容忍 null 槽位，修复管理员 GUI 必 NPE（坑 #46）
List.copyOf 拒绝 null 元素，而重定向槽位默认含 null（未配置）——
管理员打开 GUI 时 buildGuiStatus 的 dimConfig 分支必抛 NPE，服务端无回包，
客户端 2.5s 超时显示「未检测到服务器 ChunkPlan（或版本不匹配）」。
单人主机恒权限 4 故单人必现；0.2.0 无 dimConfig 分支故无此问题；
rcon 冒烟测不出（buildGuiStatus 仅 GUI 请求路径调用）。
修复为 Collections.unmodifiableList(new ArrayList<>(...))，只读且容忍 null；
新增单测 redirectOrderSnapshotToleratesUnconfiguredNullSlots 回归。